[package]
name = "twitter_auth"
version = "0.1.0"
authors = ["kumusan <ryogi0200@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.8.2"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

